further styling on mobile, fixing social-links list

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -14,16 +14,48 @@
 
 /* small tablet to big tablet: from 768px to 1023px */
 
-@media only screen and (max-width: 1023px) {}
+@media only screen and (max-width: 1023px) {
+    
+}
 
 
 /* small phones to small tablets: from 481px to 767px */
 
 @media only screen and (max-width: 767px) {
-    .social-links,
-    .footer p {
+    
+    
+    .social-links {
         display: none;
     }
+    
+    .nav {
+        display: table;
+        margin: 0 auto;
+        margin-top: 5%;
+        margin-bottom: 2%;;
+    }
+    
+    .main-nav li {
+        display: inline-block;
+        text-align: center;
+        padding-right: 50px;
+        font-size: 16px;
+    }
+    
+    #name {
+        margin-top: 0;
+        padding-top: 0;
+        padding-bottom: 2%;;
+        padding-top: 20px;
+        font-size: 40px;
+    }
+}
+
+
+/* small phones: from 0 to 480px */
+
+@media only screen and (max-width: 480px) {
+    
     nav {
         margin: 0;
         margin-top: 10%;
@@ -38,7 +70,7 @@
     #name {
         margin-top: 0;
         padding-top: 0;
-        padding-bottom: 2%;
+        margin-bottom: 2%;;
         padding-top: 20px;
         font-size: 34px;
     }
@@ -80,51 +112,5 @@
         text-align: center;
         padding-right: 40px;
     }
-}
 
-
-/* small phones: from 0 to 480px */
-
-@media only screen and (max-width: 480px) {
-    nav {
-        margin: 0;
-        margin-top: 8%;
-        padding-bottom: 9%;
-    }
-    .main-nav li {
-        display: block;
-        text-align: center;
-        font-size: 14px;
-    }
-    
-    #name {
-        margin-top: 0;
-        padding-top: 0;
-        padding-bottom: 2%;
-        font-size: 34px;
-    }
-    .jumbotron {
-        margin-top: 10px;
-        font-size: 16px;
-        margin-bottom: 0;
-    }
-    .section-projects .text {
-        font-size: 12px;
-    }
-    section.section-about {
-    font-family: 'Quicksand', 'Raleway', 'Arial', sans-serif;
-    text-align: center;
-    font-weight: 400;
-    margin: 0 5% 5% 5%;
-    margin-bottom: 8%;
-    padding-bottom: 8%;
-}
-    .section-about p {
-        font-size: 14px;
-        text-align: center;
-        padding-bottom: 10px;
-    }
-    section.section-about img {
-        display: none;
-    }
 }
